Adição da versão do currículo em PDF.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                         <p><i class="fa fa-github fa-fw w3-margin-right w3-large w3-text-teal"></i><a class="contato"
                                 href="https://github.com/tuliohsa87" target="_blank">github.com/tuliohsa87</a>
                         </p>
+                        <p><i class="fa fa-file-pdf-o fa-fw w3-margin-right w3-large w3-text-teal"></i><a class="contato"
+                                href="/document/Curriculum_Vitae_Tulio_Albuquerque.pdf" target="_blank">Baixar versão em PDF</a>
+                        </p>
                         <hr>
 
                         <p class="w3-large"><b><i
