Atualização do link do LinkedIn

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                                 href="https://web.whatsapp.com/send?phone=5581981430626" target="_blank">+55 81
                                 98143-0626</a></p>
                         <p><i class="fa fa-linkedin fa-fw w3-margin-right w3-large w3-text-teal"></i><a class="contato"
-                                href="https://www.linkedin.com/in/tuliohsa87/"
-                                target="_blank">linkedin.com/in/tuliohsa87</a>
+                                href="https://www.linkedin.com/in/tuliohsa/"
+                                target="_blank">linkedin.com/in/tuliohsa</a>
                         </p>
                         <p><i class="fa fa-github fa-fw w3-margin-right w3-large w3-text-teal"></i><a class="contato"
                                 href="https://github.com/tuliohsa87" target="_blank">github.com/tuliohsa87</a>
@@ -98,7 +98,7 @@
                     </h2>
                     <div class="w3-container">
                         <p>Profissional graduado em Sistemas para Internet, com experiência em analise e desenvolvimento
-                            de sistemas web, levantamento de requisitos, trabalho em equipe, Metodologias Ágeis.</p>
+                            de sistemas web, levantamento de requisitos, trabalho em equipe com a utilização das Metodologias Ágeis Scrum e Kanban.</p>
                         <hr>
                     </div>
                 </div>
@@ -130,7 +130,7 @@
                             <li>Responável por migrar arquitetura de uma aplicação de POS para outro fabricante.</li>
                             <li>Testar, identificar e registrar falhas de aplicação para reportar a empresa parceira.
                             </li>
-                            <li>Criar novas fucnionalidades em aplicação de POS.</li>
+                            <li>Criar novas funcionalidades em aplicação de POS.</li>
                         </ul>
                         <hr>
                     </div>
